--- a/reactJs practice.html
+++ b/reactJs practice.html
@@ -5,9 +5,24 @@
     </body>
     <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
-    <script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
         const root = document.getElementById("root");
-        const span = React.createElement("span", { id: "sexy-span", style: {color: "red"}}, "Hello im a span");
-        ReactDOM.render(span,root)
+        function Title () {
+            return <h3 id="title" onMouseEnter={ () => console.log("mouse enter")}>
+            Hello im a title
+            </h3>
+        };
+        const Button = ()=> (<button style ={{
+            backGroundColor:"tomato",
+            }} onClick={() => console.log("im clicked")}>
+            Click me
+            </button>
+            );
+        const Container = ()=> (<div>
+            <Title/>
+            <Button/>
+            </div>)
+        ReactDOM.render(<Container/>,root);
     </script>
 </html>
